tests/ui/resolve/missing-in-namespace.rs
fn main() {
    let _map = std::hahmap::HashMap::new();
    //~^ ERROR failed to resolve: could not find `hahmap` in `std
}
